last second information at the end of class to copy down

--- a/Homework-2/simpleCalculations.html
+++ b/Homework-2/simpleCalculations.html
@@ -98,7 +98,9 @@
             <li>Week 4: 178.22</li>
         </ul>
         <p id="tips"></p>
+<script src="app.js">
 
+</script>
 </body>
 
 </html>
