--- a/Week-2/basics.html
+++ b/Week-2/basics.html
@@ -73,15 +73,14 @@
       document.getElementById("addTo").innerHTML += " 5 += 2 =" + addToNum;
       let addToString = "Ty";
       addToString += "potatoguy";
-      document.getElementById("addTo").innerHTML += "Ty + potatoguy = " addToString;
       //string will append values to the other, num will add them together
 
       // subToNum is the same as addTo, however there is no subtostring
 
       //Comparison
-      document.getElementById("equal").innerHTML += " 3 == '3' = " + (3 == '3')
+      document.getElementById("equal").innerHTML += " 3 == '3' = " + (3 == "3");
       // 3 equal signs checks for 100% equal, 2 equal signs checks if they are almost the same (3 and string 3 are the same vs different)
-      document.getElementById("nEqual").innerHTML += "3 != '3' ="
+      document.getElementById("nEqual").innerHTML += "3 != '3' =";
     </script>
   </body>
 </html>
