Last second changes to hw3

--- a/Homework/Homework-3/calc.html
+++ b/Homework/Homework-3/calc.html
@@ -18,7 +18,7 @@
     <input type="button" onclick="calcInt()" value="Calculate" />
     <p id="result"></p>
     <!--creates a button type, that on click will run the calcInt func, and provides an area for it to go-->
-
+    <p id="extra"></p>
     <script src="app.js"></script>
   </body>
 </html>
