--- a/Weeks/Week-6/classroom.html
+++ b/Weeks/Week-6/classroom.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Classroom</title>
   </head>
   <body>
@@ -10,9 +10,9 @@
 
     <p id="students"></p>
 
-    <input type="text" id="studentName" name="studentName" />
+    <input type="text" name="studentName" id="studentName" />
 
-    <button onclick="addNewStudent()">+</button>
+    <button onclick="addNewStudent()">Add new student</button>
 
     <script src="classroom.js"></script>
   </body>
