--- a/Z I101/Lab7.html
+++ b/Z I101/Lab7.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Counter</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Count</h1>
+    <h1>I-101 Bike Sharing System</h1>
 
-    <p id="counter"></p>
-
-    <button onclick="addCount()">+</button>
-
-    <script src="counter.js"></script>
+    <script src="Lab7.js"></script>
   </body>
 </html>
