--- a/Homework/Homework-5/hw5.html
+++ b/Homework/Homework-5/hw5.html
@@ -6,24 +6,15 @@
     <title>Document</title>
   </head>
   <body>
+    <h3 id="promptTool"></h3>
+    <p id="toolChoice"></p>
+    <h3 id="prompt1"></h3>
     <p id="story"></p>
+    <h3 id="prompt2"></h3>
     <p id="story2"></p>
+    <h3 id="prompt3"></h3>
     <p id="story3"></p>
-    <!--
-    <h1>Choose adventure game</h1>
-    <div>
-      <p id="adventure"></p>
-      <button onclick="optionYes()">Yes</button>
-      <button onclick="optionNo()">No</button>
-      <p id="output"></p>
-    </div>
-
-    <h2 id="step2Head"></h2>
-    <p id="step2Choice"></p>
-    <button onclick="optionYes2()">Yes</button>
-    <button onclick="optionNo2()">No</button>
-    <p id="step2O"></p>
-  -->
+    <p id="story4"></p>
     <script src="app.js"></script>
   </body>
 </html>
