--- a/Z I101/I-101Homepage.html
+++ b/Z I101/I-101Homepage.html
@@ -10,11 +10,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link href="I-101Homepage.css" rel="stylesheet" type="text/css" />
+    <link href="I-101Website.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
-      <div class="row" id="header">
+      <div class="row bgCoral borderSolid header">
         <div class="col-4"> </div>
         <div class = "col">
           <h1>College Student Employment</h1>
@@ -22,25 +22,77 @@
         </div>
       </div>
       <div class = "container">
-      <div class = "row" id = "navBox">
+      <div class = "row borderSolid" id = "navBox">
         <div class = "col">
-          <h3 class = "navButton" >Home<br> Page</h3>
+          <h3 class = "navButton bgCoral borderSolid" >Home<br> Page</h3>
         </div>
         <div class = "col">
-          <h3 class = "navButton" >Data<br> Visualization</h3>
+          <h3 class = "navButton bgCoral borderSolid" >Data<br> Visualization</h3>
         </div>
         <div class = "col">
-          <h3 class = "navButton">Data<br> Description</h3>
+          <h3 class = "navButton bgCoral borderSolid">Data<br> Description</h3>
         </div>
         <div class = "col">
-          <h3 class = "navButton">About<br> Us</h3>
+          <h3 class = "navButton bgCoral borderSolid">About<br> Us</h3>
           </div>
         </div>
       </div>
     </div>
+    <br>
+<div class = "container">
+  <div class = "row">
+    <div class = "col-2"></div>
+    <div class = "col-4">
+      <img class = "homeImage" src = "Placeholder.png" alt = "Placeholder image">
+    </div>
+    <div class = "col-4">
+      <img class = "homeImage" src = "Placeholder.png" alt = "Placeholder image">
+    </div>
+    </div>
+    <hr>
+<div class = "row">
+  <div class = "col-2"></div>
+  <div class = "col-4">
+    <img class = "homeImage" src = "Placeholder.png" alt = "Placeholder image">
+  </div>
+  <div class = "col-4">
+    <img class = "homeImage" src = "Placeholder.png" alt = "Placeholder image">
+  </div>
+<br>
+</div>
+</div>
+<br>
+<div class = "container borderSolid bgWhite">
+  <div class = "row">
+    <div class = "col">
+      <h2 class = "homeH2">Description of Data set</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
+        , sed do eiusmod tempor incididunt ut labore et dolore ma
+        gna aliqua. Ut enim ad minim veniam, quis nostrud exercita
+        tion ullamco laboris nisi ut aliquip ex ea commodo conseq
+        uat. Duis aute irure dolor in reprehenderit in voluptate 
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepte
+        ur sint occaecat cupidatat non proident, sunt in culpa qui
+         officia deserunt mollit anim id es
+         t laborum.</p>
+      <h2 class = "homeH2">Data Source</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisci
+        ng elit, sed do eiusmod tempor incididunt ut labore et 
+        dolore magna aliqua. Ut enim ad minim veniam, quis nost
+        rud exercitation ullamco laboris nisi ut aliquip ex ea 
+        commodo consequat. Duis aute irure dolor in reprehenderit 
+        in voluptate velit esse cillum dolore eu fugiat nulla pari
+        atur. Excepteur sint occaecat cupidatat non proident, sunt
+         in culpa qui officia deserunt 
+         mollit anim id est laborum.</p>
+    </div>
+  </div>
+</div>
+<br>
+
     <div class="container">
       <div class="row">
-        <div class = "col-10" id = "footer">
+        <div class = "col bgCoral borderSolid" id = "footer">
           <h5>Contact Us!</h5>
         </div>
         </div>
