--- a/Z I101/Lab9.html
+++ b/Z I101/Lab9.html
@@ -7,7 +7,23 @@
   </head>
   <body>
     <h1 id="h1">JS Lab III</h1>
-    <p id="p">Some Text</p>
+    <p id="ptag">My New Paragraph</p>
+    <img
+      src="usimg1.jpg"
+      alt="img1"
+      width="477"
+      height="323"
+      usemap="#mymap"
+      id="usmap"
+    />
+    <map name="mymap">
+      <area
+        shape="poly"
+        coords="306,122,328,120,331,141,331,141,328,161,307,171"
+        alt=""
+        id="indy"
+      />
+    </map>
     <script src="Lab9.js"></script>
   </body>
 </html>
