--- a/Z I101/Website/I-101Homepage.html
+++ b/Z I101/Website/I-101Homepage.html
@@ -24,36 +24,29 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <a href="I-101Homepage.html">
-            <h3 class="navButton bgBlue borderSolid textBlack">
-              Home<br />
-              Page
-            </h3></a
-          >
+          <a href = 
+          <h3 class="navButton bgBlue borderSolid">
+            Home<br />
+            Page
+          </h3>
         </div>
         <div class="col">
-          <a href="I-101DataVis.html">
-            <h3 class="navButton bgBlue borderSolid textBlack">
-              Data<br />
-              Visualization
-            </h3></a
-          >
+          <h3 class="navButton bgBlue borderSolid">
+            Data<br />
+            Visualization
+          </h3>
         </div>
         <div class="col">
-          <a href="I-101DataDescription.html">
-            <h3 class="navButton bgBlue borderSolid textBlack">
-              Data<br />
-              Description
-            </h3></a
-          >
+          <h3 class="navButton bgBlue borderSolid">
+            Data<br />
+            Description
+          </h3>
         </div>
         <div class="col">
-          <a href="AboutUsPage.html">
-            <h3 class="navButton bgBlue borderSolid textBlack">
-              About<br />
-              Us
-            </h3></a
-          >
+          <h3 class="navButton bgBlue borderSolid">
+            About<br />
+            Us
+          </h3>
         </div>
       </div>
     </div>
