--- a/Z I101/I-101Gender.html
+++ b/Z I101/I-101Gender.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Data Description 2</title>
+    <title>HomePage</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -10,6 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="I-101Website.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -62,48 +63,31 @@
     <div class="container">
       <div class="row">
         <div class="col-2"></div>
-        <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
-        </div>
-        <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
+        <div class="col-8">
+          <h3 class="bgBlue centerDiv borderSolid">Age Ranges</h3>
         </div>
       </div>
-      <hr />
       <div class="row">
         <div class="col-2"></div>
-        <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
+        <div class="col-8">
+          <canvas class="chart borderSolid" id="genderChart"></canvas>
         </div>
-        <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
-        </div>
-        <br />
       </div>
-    </div>
-    <br />
-    <div class="container borderSolid bgWhite">
+      <br />
       <div class="row">
-        <div class="col">
-          <h2 class="homeH2">Description of Data set</h2>
-          <p>
+        <div class="col-1"></div>
+        <div class="col-10 borderSolid">
+          <!-- More detailed description of the chart's contents
+           it's kinda massive also i ono -->
+          <h2 class="homeH2">Description of the data</h2>
+          <p class="centerDiv margin">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit , sed do
             eiusmod tempor incididunt ut labore et dolore ma gna aliqua. Ut enim
             ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut
             aliquip ex ea commodo conseq uat. Duis aute irure dolor in
-            reprehenderit in volup-tate velit esse cillum dolore eu fugiat nulla
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepte ur sint occaecat cupidatat non proident, sunt in
             culpa qui officia deserunt mollit anim id es t laborum.
-          </p>
-          <h2 class="homeH2">Data Source</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisci ng elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nost rud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pari atur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
       </div>
@@ -118,5 +102,7 @@
         </div>
       </div>
     </div>
+
+    <script src="GenderGraph.js"></script>
   </body>
 </html>
