--- a/Z I101/I-101DataDescription.html
+++ b/Z I101/I-101DataDescription.html
@@ -64,71 +64,64 @@
     <div class="row">
       <div class="col-2"></div>
       <div class="col-4">
-        <img class="Image" src="Placeholder.png" alt="Placeholder" />
+        <img class="Image" src="work.jpg" alt="Placeholder" />
       </div>
       <div class="col-4 borderSolid">
         <br />
-        <h3 class="underline centerDiv">Age Range</h3>
+        <a class="hyperlink" href="I-101HoursWorked.html">
+          <h3 class="underline centerDiv bgBlue borderSolid padding hover">
+            Hours Worked
+          </h3></a
+        >
         <br />
         <p class="centerDiv">
-          This is going to be a sentence that talks about the age ranges that we
-          have selected for this data set
+          This bar chart will display the number of hours worked by college
+          students, ranging from 10 hours to over 35 hours. The data shows the
+          percentages of people who are working a certain amount of hours, which
+          is separated by gender.
         </p>
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col">
-            <a
-              class="hyperlink"
-              href
-              src="I-10AgeRange.html
-            "
-              >Age Range link</a
-            >
-          </div>
-        </div>
       </div>
     </div>
     <br />
     <div class="row">
       <div class="col-2"></div>
       <div class="col-4">
-        <img class="Image" src="Placeholder.png" alt="Placeholder" />
+        <img class="Image" src="group2.jpg" alt="Placeholder" />
       </div>
       <div class="col-4 borderSolid">
         <br />
-        <h3 class="underline centerDiv">Ethnicity</h3>
+        <a class="hyperlink" href="I-101Race.html">
+          <h3 class="underline centerDiv bgBlue borderSolid padding hover">
+            Ethnicities
+          </h3></a
+        >
         <br />
         <p class="centerDiv">
-          This is going to be a sentence that talks about the different
-          ethnicities that we are talking about
+          This bar chart will display the population distribution of students by
+          race, illustrating the percentage of students in four racial
+          categories: White, Black, Hispanic, and Asian.
         </p>
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col">
-            <a class="hyperlink" href src="I-101Homepage.html">Homepage</a>
-          </div>
-        </div>
       </div>
     </div>
     <br />
     <div class="row">
       <div class="col-2"></div>
       <div class="col-4">
-        <img class="Image" src="Placeholder.png" alt="Placeholder" />
+        <img class="Image" src="age.png" alt="Placeholder" />
       </div>
       <div class="col-4 borderSolid">
         <br />
-        <h3 class="underline centerDiv">Family Status</h3>
+        <a class="hyperlink" href="I-10AgeRange.html">
+          <h3 class="underline centerDiv bgBlue borderSolid padding hover">
+            Age Range
+          </h3></a
+        >
         <br />
         <p class="centerDiv">
-          This is going to be a sentence that talks about family status
+          This bar chart will show&nbsp; the percentage rates of student
+          employment. The age ranges of 16-24, 25-29, 30-39, and 40-49 are
+          included.
         </p>
-        <div class="row">
-          <div class="col-4"></div>
-          <div class="col">
-            <a class="hyperlink" href src="I-101Homepage.html">Homepage</a>
-          </div>
-        </div>
       </div>
     </div>
     <br />
