--- a/Z I101/I-101Homepage.html
+++ b/Z I101/I-101Homepage.html
@@ -63,20 +63,20 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
+          <img class="Image" src="group1.png" alt="Placeholder image" />
         </div>
         <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
+          <img class="Image" src="group2.jpg" alt="Placeholder image" />
         </div>
       </div>
       <hr />
       <div class="row">
         <div class="col-2"></div>
         <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
+          <img class="Image" src="Group3.jpg" alt="Placeholder image" />
         </div>
         <div class="col-4">
-          <img class="Image" src="Placeholder.png" alt="Placeholder image" />
+          <img class="Image" src="parent.png" alt="Placeholder image" />
         </div>
         <br />
       </div>
@@ -87,23 +87,17 @@
         <div class="col">
           <h2 class="homeH2">Description of Data set</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit , sed do
-            eiusmod tempor incididunt ut labore et dolore ma gna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut
-            aliquip ex ea commodo conseq uat. Duis aute irure dolor in
-            reprehenderit in volup-tate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepte ur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id es t laborum.
+            For our datasets it shows different graphs and for college student
+            employment. Some show and have backgrounds behind age, gender and
+            race.
           </p>
           <h2 class="homeH2">Data Source</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisci ng elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nost rud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pari atur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            Our data sources were from
+            <a href="https://nces.ed.gov/programs/coe/indicator/ssa"
+              >COE - College Student Employment</a
+            >
+            for the many different sets and charts needed for our webpage!
           </p>
         </div>
       </div>
