--- a/Final/Final.html
+++ b/Final/Final.html
@@ -6,6 +6,13 @@
     <title>Document</title>
   </head>
   <body>
+    <label for="username">Username</label>
+    <input type="text" name="username" id="username" />
+    <br />
+
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password" />
+
     <script src="Final.js"></script>
   </body>
 </html>
