--- a/Z I101/I-101HoursWorked.html
+++ b/Z I101/I-101HoursWorked.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HomePage</title>
+    <title>Hours Worked</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -64,13 +64,13 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <h3 class="bgBlue centerDiv borderSolid">Age Ranges</h3>
+          <h3 class="bgBlue centerDiv borderSolid">Hours Worked</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <canvas class="chart borderSolid" id="genderChart"></canvas>
+          <canvas class="chart borderSolid" id="genderChartL"></canvas>
         </div>
       </div>
       <br />
@@ -81,13 +81,15 @@
            it's kinda massive also i ono -->
           <h2 class="homeH2">Description of the data</h2>
           <p class="centerDiv margin">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit , sed do
-            eiusmod tempor incididunt ut labore et dolore ma gna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut
-            aliquip ex ea commodo conseq uat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepte ur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id es t laborum.
+            For the less than 10 hours category, 3.1% of male students and 4.3%
+            of female students report working in this range. In the 10-19 hours
+            range, 9.1% of males and 10.6% of females work, indicating a
+            slightly higher proportion of females in this category. When it
+            comes to the 20-34 hours range, both genders show similar figures,
+            with 16.6% of male students and 16.3% of female students working
+            these hours. Finally, for the more than 35 hours category, 9.8% of
+            males and 10.1% of females report working more than 35 hours per
+            week, with females again slightly outpacing males.
           </p>
         </div>
       </div>
@@ -103,6 +105,6 @@
       </div>
     </div>
 
-    <script src="GenderGraph.js"></script>
+    <script src="HoursWorked.js"></script>
   </body>
 </html>
