--- a/Z I101/I-101Race.html
+++ b/Z I101/I-101Race.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HomePage</title>
+    <title>Ethnicities</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -81,13 +81,19 @@
            it's kinda massive also i ono -->
           <h2 class="homeH2">Description of the data</h2>
           <p class="centerDiv margin">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit , sed do
-            eiusmod tempor incididunt ut labore et dolore ma gna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercita tion ullamco laboris nisi ut
-            aliquip ex ea commodo conseq uat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepte ur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id es t laborum.
+            This bar chart displays the population distribution of students by
+            race, illustrating the percentage of students in four racial
+            categories: White, Black, Hispanic, and Asian. White students make
+            up the largest proportion of the student population, at 44.1%,
+            followed by Hispanic students, who account for 39.0%. The percentage
+            of Black students is 36.6%, while Asian students represent the
+            smallest group, with 31.1% of the population. The chart provides a
+            clear visual comparison of these racial groups, with each category
+            represented by a differently colored bar—light teal for White,
+            purple for Black, orange for Hispanic, and red for Asian. Overall,
+            the chart shows that White students constitute the largest share of
+            the student population, followed by Hispanic, Black, and Asian
+            students.
           </p>
         </div>
       </div>
