--- a/Z I101/I-10AgeRange.html
+++ b/Z I101/I-10AgeRange.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HomePage</title>
+    <title>Age Range</title>
     <link
       id="video"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -25,28 +25,36 @@
     <div class="container">
       <div class="row borderSolid" id="navBox">
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Home<br />
-            Page
-          </h3>
+          <a href="I-101Homepage.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Home<br />
+              Page
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Visualization
-          </h3>
+          <a href="I-101DataVis.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Visualization
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            Data<br />
-            Description
-          </h3>
+          <a href="I-101DataDescription.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              Data<br />
+              Description
+            </h3></a
+          >
         </div>
         <div class="col">
-          <h3 class="navButton bgBlue borderSolid">
-            About<br />
-            Us
-          </h3>
+          <a href="AboutUsPage.html">
+            <h3 class="navButton bgBlue borderSolid textBlack">
+              About<br />
+              Us
+            </h3></a
+          >
         </div>
       </div>
     </div>
@@ -62,7 +70,7 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <canvas class="chart borderSolid" id="myChart"></canvas>
+          <canvas class="chart borderSolid" id="ageChart"></canvas>
         </div>
       </div>
       <br />
